Add fail-closed agent Function Catalog views (#3)
Adds metadata-only capability views with shared discovery/invocation policy and MCP publication, preserving trusted catalog API compatibility.

Validation: exact-head Gradle run 31288954773 succeeded; all known Codex review threads are addressed and resolved.

Authorship: TJ (`tjXJNOOBIE`) + ChatGPT connected GitHub agent.